--- a/css/main.css
+++ b/css/main.css
@@ -644,7 +644,7 @@ body {
   max-width: 400px;
   /* height: 80%; */
   /* width: 100%; */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .mySwiper {
