--- a/css/main.css
+++ b/css/main.css
@@ -247,10 +247,10 @@ body {
   padding-bottom: 50px;
 }
 .recent__grid {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 40px;
-  padding: 15px;
+  padding: 15px; */
 
   background-color: #fff;
   border-radius: 10px;
