--- a/css/main.css
+++ b/css/main.css
@@ -782,8 +782,6 @@ body {
     border-radius: 50px;
   }
 }
-.product-page__reviews-item__person-name {
-}
 .product-page__reviews-item__rating {
   margin-top: 10px;
   img {
@@ -799,4 +797,35 @@ body {
 .product-page__reviews-item__date {
   margin-top: 10px;
   opacity: 0.8;
+}
+
+/* Loader */
+.loader {
+  width: 65px;
+  aspect-ratio: 1;
+  position: relative;
+
+  margin: 0 auto;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  inset: 0 auto auto 0;
+  aspect-ratio: 1;
+  border-radius: 50px;
+  box-shadow: 0 0 0 3px inset #fff;
+  animation: l5 1s infinite linear alternate;
+}
+.loader:after {
+  inset: auto 0 0 auto;
+  animation-delay: -1s;
+}
+@keyframes l5 {
+  0% {
+    width: 20px;
+  }
+  100% {
+    width: 50px;
+  }
 }
