--- a/css/main.css
+++ b/css/main.css
@@ -799,33 +799,11 @@ body {
   opacity: 0.8;
 }
 
-/* Loader */
-.loader {
-  width: 65px;
-  aspect-ratio: 1;
-  position: relative;
-
-  margin: 0 auto;
+.searchItems {
+  padding: 50px 0;
 }
-.loader:before,
-.loader:after {
-  content: "";
-  position: absolute;
-  inset: 0 auto auto 0;
-  aspect-ratio: 1;
-  border-radius: 50px;
-  box-shadow: 0 0 0 3px inset #fff;
-  animation: l5 1s infinite linear alternate;
-}
-.loader:after {
-  inset: auto 0 0 auto;
-  animation-delay: -1s;
-}
-@keyframes l5 {
-  0% {
-    width: 20px;
-  }
-  100% {
-    width: 50px;
-  }
+.searchItems__grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
