started to do add to favorite feature

--- a/css/main.css
+++ b/css/main.css
@@ -301,6 +301,7 @@ body {
   &:hover {
     img {
       opacity: 1;
+      pointer-events: none;
     }
     background-color: var(--gray-hover);
   }
