--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,9 @@
   font-weight: 600;
   margin: 20px 0;
 }
+i {
+  pointer-events: none;
+}
 body {
   font-family: "Montserrat";
   background-color: var(--bg-gray);
@@ -115,9 +118,6 @@ body {
 }
 [data-nav-profile] {
   margin-left: 10px;
-  img {
-    max-width: 60px;
-  }
 }
 
 .nav__item-title {
@@ -249,11 +249,6 @@ body {
   padding-bottom: 50px;
 }
 .recent__grid {
-  /* display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 40px;
-  padding: 15px; */
-
   background-color: #fff;
   border-radius: 10px;
 }
@@ -329,7 +324,7 @@ body {
   &:hover {
     i {
       opacity: 1;
-      pointer-events: none;
+      /* pointer-events: none; */
     }
     background-color: var(--gray-hover);
   }
@@ -756,7 +751,7 @@ body {
   i {
     font-size: 24px;
     padding: 5px;
-    pointer-events: none;
+    /* pointer-events: none; */
   }
 
   &.active i {
