--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,14 @@ body {
       filter: invert(1);
     }
   }
+
+  &.active {
+    background-color: var(--accent);
+    img {
+      opacity: 1;
+      filter: invert(1);
+    }
+  }
 }
 
 .recent__item-cta__img {
