--- a/css/main.css
+++ b/css/main.css
@@ -1034,7 +1034,9 @@ body {
 
 .checkout__row {
   display: flex;
-  gap: 20px;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 30px;
 }
 .checkout__row-left {
   max-width: 600px;
@@ -1148,12 +1150,66 @@ body {
   border: 2px solid #2b2b2b;
   border-radius: 10px;
   padding: 5px;
+
+  position: relative;
 }
 .checkout__details-item__label {
-  color: #2b2b2b;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  padding: 5px;
+
+  font-size: 16px;
+  cursor: text;
+
+  color: rgba(102, 102, 102, 0.7);
+  pointer-events: none;
+
+  transition: all 0.2s ease-in;
+}
+.checkout__details-item input:focus ~ .checkout__details-item__label,
+.checkout__details-item input:not([value=""]) ~ .checkout__details-item__label {
+  transform: translateY(-25px);
+  font-size: 14px;
 }
 .checkout__details-item__input {
+  padding: 10px 20px 0px 5px;
 }
 
 .checkout__row-right {
+  width: 100%;
+  padding: 15px;
+
+  .cart__right-sum {
+    border-bottom: 1px solid rgba(75, 75, 75, 0.4);
+    padding-bottom: 20px;
+  }
+}
+
+.checkout__items {
+  margin: 20px 0;
+  .catalog__items-product {
+    margin: 10px 0;
+
+    .recent__item-title {
+      font-size: 20px;
+      font-weight: 600;
+    }
+
+    .recent__item-img {
+      text-align: left;
+      display: inline-flex;
+
+      img {
+        max-height: 150px;
+      }
+    }
+
+    .recent__item-amount {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #4b4b4b;
+    }
+  }
 }
