--- a/css/main.css
+++ b/css/main.css
@@ -1229,14 +1229,64 @@ body {
   font-weight: 500;
   font-size: 18px;
 }
-.checkout__delivery-content__place-address {
-  /* font-size: 14px; */
-}
 
 #map {
-  width: 800px;
-  height: 600px;
+  width: 500px !important;
+  height: 300px;
   &.selected {
     background-color: #e0f7fa;
+  }
+}
+
+.ymaps-2-1-79-hint {
+  background-color: rgba(255, 255, 255, 0.9) !important;
+  border-radius: 8px !important;
+  padding: 5px 8px !important;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2) !important;
+  font-family: Arial, sans-serif !important;
+  color: #333 !important;
+  font-size: 14px !important;
+  border: 1px solid #ccc !important;
+}
+
+[class*="copyrights-pane"],
+[class*="logo"] {
+  display: none !important;
+}
+
+.map__confirm {
+  margin-top: 20px;
+  max-width: 200px;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  font-size: 18px;
+  font-weight: 600;
+  background-color: var(--accent);
+  border-radius: 10px;
+  color: #fff;
+
+  cursor: pointer;
+
+  button {
+    pointer-events: none;
+  }
+}
+
+.checkout-submit__btn {
+  margin-top: 20px;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  font-size: 18px;
+  font-weight: 600;
+  background-color: var(--accent);
+  border-radius: 10px;
+  color: #fff;
+
+  cursor: pointer;
+
+  button {
+    pointer-events: none;
   }
 }
