--- a/css/components/favorites.css
+++ b/css/components/favorites.css
@@ -21,3 +21,24 @@
     margin: 20px 0;
   }
 }
+
+@media (max-width: 425px) {
+  .favorites__heading {
+    padding: 10px;
+    margin: 10px 0;
+  }
+  .favorites__heading-title {
+    font-size: 16px;
+  }
+  .favorites__main {
+    .catalog__items-product {
+      margin: 20px 0;
+      flex-direction: column;
+      gap: 10px;
+
+      & .recent__item-img img {
+        max-width: 150px;
+      }
+    }
+  }
+}
