--- a/css/components/profile.css
+++ b/css/components/profile.css
@@ -1,5 +1,3 @@
-/* profile */
-
 .profile__content {
 }
 .profile__content-order {
@@ -62,8 +60,6 @@
     margin-right: 5px;
   }
 }
-.profile__content-order__products {
-}
 .profile__content-order__product {
   display: flex;
   align-items: flex-start;
@@ -92,8 +88,6 @@
     color: #000;
   }
 }
-.profile__content-order__product-price {
-}
 .profile__content-order__product-price__total {
   span {
     font-size: 18px;
@@ -117,5 +111,69 @@
   span {
     font-size: 20px;
     font-weight: 500;
+  }
+}
+
+@media (max-width: 1024px) {
+  .profile__content-order__info {
+    flex-direction: column;
+  }
+  .profile__content-order__info-phone {
+    i {
+      width: 20px;
+      text-align: center;
+    }
+  }
+  .profile__content-order__info-delivery {
+    i {
+      width: 20px;
+      text-align: center;
+    }
+  }
+  .profile__content-order__info-payment {
+    i {
+      width: 20px;
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .profile__content-order__product {
+    flex-direction: column;
+    gap: 15px;
+  }
+  .profile__content-order__product-price__qty {
+    text-align: left;
+  }
+}
+
+@media (max-width: 550px) {
+  .profile__content-order__info-phone {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    i {
+      width: 20px;
+      text-align: center;
+    }
+  }
+  .profile__content-order__info-delivery {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    i {
+      width: 20px;
+      text-align: center;
+    }
+  }
+  .profile__content-order__info-payment {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    i {
+      width: 20px;
+      text-align: center;
+    }
   }
 }
